[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/menu/lobby/LobbyJoinMenu.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/fonts/Extrude.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.237305, 0.0785608, 0.0785608, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFontData" id=29]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=30]
size = 12
font_data = SubResource( 29 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 3 )

[node name="LobbyJoinMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.282353, 0.0941176, 0.0941176, 1 )

[node name="Root" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Contents" type="VBoxContainer" parent="Root"]
margin_left = 363.0
margin_top = 219.0
margin_right = 660.0
margin_bottom = 380.0
custom_constants/separation = 10
alignment = 1

[node name="Header" type="Label" parent="Root/Contents"]
margin_right = 297.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Join a Lobby"
align = 1

[node name="ServerAddress" type="LineEdit" parent="Root/Contents"]
margin_top = 58.0
margin_right = 297.0
margin_bottom = 82.0
size_flags_vertical = 4
custom_constants/minimum_spaces = 30
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
max_length = 30
placeholder_text = "Server address"
caret_blink = true

[node name="ServerPort" type="LineEdit" parent="Root/Contents"]
margin_top = 92.0
margin_right = 297.0
margin_bottom = 116.0
size_flags_vertical = 4
custom_constants/minimum_spaces = 30
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
max_length = 4
placeholder_text = "Port"
caret_blink = true

[node name="Error" type="Label" parent="Root/Contents"]
visible = false
margin_top = 160.0
margin_right = 366.0
margin_bottom = 178.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
align = 1

[node name="OptionContents" type="HBoxContainer" parent="Root/Contents"]
margin_top = 126.0
margin_right = 297.0
margin_bottom = 161.0

[node name="ConnectOption" type="Label" parent="Root/Contents/OptionContents"]
margin_right = 84.0
margin_bottom = 35.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
text = "Connect"

[node name="Spacer" type="Control" parent="Root/Contents/OptionContents"]
margin_left = 88.0
margin_right = 245.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="BackOption" type="Label" parent="Root/Contents/OptionContents"]
margin_left = 249.0
margin_right = 297.0
margin_bottom = 35.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
text = "Back"
align = 2

[connection signal="focus_entered" from="Root/Contents/ServerAddress" to="." method="_on_ServerAddress_focus_entered"]
[connection signal="focus_exited" from="Root/Contents/ServerAddress" to="." method="_on_ServerAddress_focus_exited"]
[connection signal="text_changed" from="Root/Contents/ServerAddress" to="." method="_on_ServerAddress_text_changed"]
[connection signal="focus_entered" from="Root/Contents/ServerPort" to="." method="_on_ServerPort_focus_entered"]
[connection signal="focus_exited" from="Root/Contents/ServerPort" to="." method="_on_ServerPort_focus_exited"]
[connection signal="text_changed" from="Root/Contents/ServerPort" to="." method="_on_ServerPort_text_changed"]
[connection signal="gui_input" from="Root/Contents/OptionContents/ConnectOption" to="." method="_on_ConnectOption_gui_input"]
[connection signal="mouse_entered" from="Root/Contents/OptionContents/ConnectOption" to="." method="_on_ConnectOption_mouse_entered"]
[connection signal="mouse_exited" from="Root/Contents/OptionContents/ConnectOption" to="." method="_on_ConnectOption_mouse_exited"]
[connection signal="gui_input" from="Root/Contents/OptionContents/BackOption" to="." method="_on_BackOption_gui_input"]
[connection signal="mouse_entered" from="Root/Contents/OptionContents/BackOption" to="." method="_on_BackOption_mouse_entered"]
[connection signal="mouse_exited" from="Root/Contents/OptionContents/BackOption" to="." method="_on_BackOption_mouse_exited"]
